# PolyAgent

./: .gitignore  README.md  main.py  pyproject.toml
.gemini/: settings.json
OMG_mcp/: main.py
OMG_mcp/schemas/: constraints.json  property.py  property_registry.py
OMG_mcp/src/propertyhead/finetuned_EPS/: EPS_predictor.pth  EPS_scaler.pth
OMG_mcp/src/propertyhead/finetuned_Eea/: Eea_predictor.pth  Eea_scaler.pth
OMG_mcp/src/propertyhead/finetuned_Egb/: Egb_predictor.pth  Egb_scaler.pth
OMG_mcp/src/propertyhead/finetuned_OPV/: OPV_predictor.pth  OPV_scaler.pth
OMG_mcp/src/propertyhead/finetuned_PE_I/: PE_I_predictor.pth  PE_I_scaler.pth
OMG_mcp/src/propertyhead/finetuned_multiproperty_model/: property_predictor_multiproperty.pth  vae_parameters_multiproperty.pth
OMG_mcp/src/propertyhead/finetuned_multiproperty_model/checkpoints/: multiprop_epoch_100.pth  multiprop_epoch_20.pth  multiprop_epoch_40.pth  multiprop_epoch_50.pth  multiprop_epoch_60.pth  multiprop_epoch_80.pth
OMG_mcp/tools/: decode_latents.py  load_model.py  load_single_property.py  model_state.py  multiproperty_optimiser.py  optimiser.py  singleproperty_optimiser.py  validate_constraints.py
TransPolymer_mcp/: main.py
